Update solar site

--- a/documentation/framework_architecture/index.html
+++ b/documentation/framework_architecture/index.html
@@ -1984,7 +1984,7 @@ Cflags: -I${includedir}</code></pre>
 <p>Conan works with any build system too. There are built-in integrations with most popular ones, like <strong>CMake</strong>, Visual Studio (MSBuild), Autotools and Makefiles, SCons, etc. But it is not a requirement to use any of them. It is not even necessary that all packages use the same build system, every package can use their own build system, and depend on other packages using different build systems. It is also possible to integrate with any build system, including proprietary ones.</p>
 </div>
 <div class="paragraph">
-<p>SolAR has its own Conan remote server to store recipes corresponding to binaries related to SolAR third parties and modules. Thus, binaries used by SolAR on the recommended platforms can be directly downloaded without the need to build them on the client. The <strong>“conan-solar”</strong> remote server is accessible at the following URL: <a href="https://artifact.b-com.com/api/conan/solar-conan-local" class="bare">https://artifact.b-com.com/api/conan/solar-conan-local</a></p>
+<p>SolAR has its own Conan remote server to store recipes corresponding to binaries related to SolAR third parties and modules. Thus, binaries used by SolAR on the recommended platforms can be directly downloaded without the need to build them on the client. The <strong>“conan-solar”</strong> remote server is accessible at the following URL: <a href="https://repository.solarframework.org/conan" class="bare">https://repository.solarframework.org/conan</a></p>
 </div>
 <div class="paragraph">
 <p>Conan web site: <a href="https://conan.io/" class="bare">https://conan.io/</a></p>
