--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -765,7 +765,7 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>conan remote add conan-solar https://artifact.b-com.com/api/conan/solar-conan-local --insert 0
+<pre>conan remote add conan-solar https://repository.solarframework.org/conan --insert 0
 conan remote add conan-bcom https://artifact.b-com.com/api/conan/bcom-conan-local --insert 1</pre>
 </div>
 </div>
@@ -775,7 +775,7 @@ conan remote add conan-bcom https://artifact.b-com.com/api/conan/bcom-conan-loca
 <div class="listingblock">
 <div class="content">
 <pre>$ conan remote list
-conan-solar: https://artifact.b-com.com/api/conan/solar-conan-local [Verify SSL: True]
+conan-solar: https://repository.solarframework.org/conan [Verify SSL: True]
 conan-bcom: https://artifact.b-com.com/api/conan/bcom-conan-local [Verify SSL: True]
 conancenter: https://center.conan.io [Verify SSL: True]</pre>
 </div>
