Update solar site

--- a/install/windows/index.html
+++ b/install/windows/index.html
@@ -767,8 +767,7 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 </div>
 <div class="listingblock">
 <div class="content">
-<pre>conan remote add conan-solar https://repository.solarframework.org/conan --insert 0
-conan remote add conan-bcom https://artifact.b-com.com/api/conan/bcom-conan-local --insert 1</pre>
+<pre>conan remote add conan-solar https://repository.solarframework.org/conan --insert 0</pre>
 </div>
 </div>
 <div class="paragraph">
@@ -778,7 +777,6 @@ conan remote add conan-bcom https://artifact.b-com.com/api/conan/bcom-conan-loca
 <div class="content">
 <pre>&gt; conan remote list
 conan-solar: https://repository.solarframework.org/conan [Verify SSL: True]
-conan-bcom: https://artifact.b-com.com/api/conan/bcom-conan-local [Verify SSL: True]
 conancenter: https://center.conan.io [Verify SSL: True]</pre>
 </div>
 </div>
