Update solar site

--- a/install/linux/index.html
+++ b/install/linux/index.html
@@ -730,7 +730,7 @@ As you will see later, the SolAR framework is based on <em>QMake</em> originally
 <div class="ulist">
 <ul>
 <li>
-<p>Download the <a href="https://github.com/SolarFramework/Tools/releases/download/XPCF_Linux_Installer/XPCF_Linux_Installer.zip">XPCF Linux Installer</a> zip file.</p>
+<p>Download the <a href="https://github.com/b-com-software-basis/remaken/releases/download/Remaken_Linux_Installer_conan1.X/Remaken_Linux_Installer.zip">XPCF Linux Installer</a> zip file.</p>
 </li>
 <li>
 <p>Uncompress this zip file.</p>
